body aligned and video set to background image, still display issues

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -3,6 +3,7 @@
 
 .home-content {
   object-fit: cover;
+  overflow: hidden;
 }
 
 img {
@@ -10,11 +11,11 @@ img {
     max-height: 100%;
 }
 
-.well {
-  h2{
-    color: 'white';
-  }
-  p {
-    color: 'white';
-  }
+body {
+  text-align: center;
+}
+
+#home-video {
+  background-image: url("../images/header-bg.mp4");
+  background-size: cover;
 }
